# laserDESK2026

./: .gitignore  AGENTS.md  README.md
.github/workflows/: backend-ci.yml  deploy-github-pages.yml  e2e.yml  frontend-ci.yml  release-backend-windows.yml  release-backend.yml
backend/: CMakeLists.txt  README.md
backend/src/: main.cpp
backend/src/dxf/: ascii_dxf_lines.cpp  ascii_dxf_lines.hpp
backend/src/http/: api_router.cpp  api_router.hpp
backend/src/rtc/: ethernet_rtc_client.cpp  ethernet_rtc_client.hpp  job_id.cpp  job_id.hpp  mock_rtc_client.cpp  mock_rtc_client.hpp  rtc_client.hpp  rtc_discover.cpp  rtc_discover.hpp  rtc_types.hpp
backend/src/rtc/job/: dxf_rif_list_mapper.cpp  dxf_rif_list_mapper.hpp  rtc_job_plan.cpp  rtc_job_plan.hpp  scene_v1.cpp  scene_v1.hpp
backend/src/rtc/rif/: byte_order.hpp  command_log_format.cpp  command_log_format.hpp  get_status_bits.hpp  remote_list_commands.hpp  telegram_raw.cpp  telegram_raw.hpp  udp_channel.cpp  udp_channel.hpp
backend/tests/: test_backend_session.cpp  test_backend_session_dxf.cpp  test_dxf_parse.cpp  test_dxf_rif_list_mapper.cpp  test_ethernet_integration.cpp  test_mock_rtc.cpp  test_rtc_discover.cpp  test_scene_v1.cpp  test_telegram_raw.cpp
backend/win/: laserdesk_backend.manifest  laserdesk_backend.rc  laserdesk_manifest_only.rc
demo/dxf/: SCANLABLogo.dxf
docs/: github-pages-setup.md  implementation-plan.md  laserDESK_2026_Projektplan.html  reference-phase-d-amcf.md  reference-phase-d-sirius3-amcf.md  rtc6_rif_wrapper.cpp  rtc6_rif_wrapper.h  telegrams.h
docs/adr/: 0001-rtc6-ethernet-remote-interface.md
docs/api/: openapi-phase-a-sketch.yaml
docs/requirements/: mvp-feature-katalog.md  phase-g-dxf-implementation-plan.md
docs/rtc/: bring-up-checklist-phase-c.md  handbuch-1089-remote-interface-plan.md  mock-rtc-specification.md  remote-interface-sources.md  rif-command-coverage.md  version-alignment.md
docs/workflows/: workflow-schema.json
frontend/: README.md  package-lock.json  package.json  playwright.config.ts  svelte.config.js  vite.config.ts
frontend/e2e/: backend-connect.spec.ts  dxf-demo.spec.ts  editor.spec.ts  workflow-demo.spec.ts
frontend/scripts/: e2e-backend.mjs
frontend/src/lib/: app.css
frontend/src/lib/api/: config.ts  laserdesk.ts
frontend/src/lib/components/: ApiBaseSettings.svelte  EntityLaserPanel.svelte  LaserGroupsPanel.svelte  LaserPropertiesPanel.svelte  RtcConnectionPanel.svelte  SceneEditor.svelte  SceneJobTree.svelte  WorkflowRunner.svelte
frontend/src/lib/laser/: rtcChannel.ts
frontend/src/lib/scene/: arcMm.ts  laserProperties.ts  mmAxes.ts  sceneV1.ts  selection.ts
frontend/src/lib/workflow/: types.ts  validate.ts
frontend/src/routes/: +layout.svelte  +page.svelte  +page.ts
frontend/src/routes/dxf/: +page.svelte
frontend/src/routes/editor/: +page.svelte
frontend/src/routes/rtc/: +page.svelte
frontend/src/routes/usage/: +page.svelte
frontend/src/routes/workflow/: +page.svelte
frontend/static/demo/correction/: D2_823.ct5
frontend/static/workflows/: reference-minimal-demo.json
scripts/: run-backend-macos.sh
